<resources>
    <string name="app_name">Fairy</string>
    <string name="auth_key">727046784e6568663130354363776d6c</string>

    <!-- Fairy 데이터베이스 관련 String Resource -->
    <string name="database_name">FairyDatabase</string>
    <string name="heart_table_name">InfoTable_Heart</string>
    <string name="diary_table_name">DiaryTable</string>

    <!-- 필터링 될 문화 행사 Subject Code-->
    <string name="subjcode_opera">3.0</string>
    <string name="subjcode_art">7.0</string>
    <string name="subjcode_drama">5.0</string>
    <string name="subjcode_festival">12.0</string>
    <string name="subjcode_concert">1.0</string>

    <!-- 행사 참가료 무료 관련 메시지-->
    <string name="text_free">무료</string>
    <string name="text_not_free">유료</string>

    <string name="cd_passcodelock_logo">PasscodeLock Logo</string>
    <string name="passcode_fingerprint_supported">Fingerprint Supported</string>

    <!-- 비밀번호 변경할 때 TEXT -->
    <string name="passcode_enter_old_passcode">이전 비밀번호를 입력하시오</string>
    <string name="passcode_re_enter_passcode">다시 입력하시오</string>

    <!-- 잠금 설정 메뉴의 스위치 부분과 그 밑에 비밀번호 변경 부분이다. OFF 일 때 Text ///  ON일 때 Text를 따로 설정할수있지만 일단은 같게 해놨다. 현지가 바꾸고싶으면 바꿔도 된다 -->
    <string name="passcode_turn_off">잠금 설정</string>
    <string name="passcode_turn_on">잠금 설정</string>
    <string name="passcode_change_passcode">비밀번호 변경</string>

    <!-- 잘못된 비밀번호를 입력했을 때 띄어지는 토스트 창에 있는 TEXT -->
    <string name="passcode_wrong_passcode">잘못된 비밀번호 입니다</string>

    <!-- 비밀번호 치는 창 위에 떠있는 TEXT <<확인해봐 -->
    <string name="passcodelock_prompt_message">비밀번호를 입력하시오</string>

    <string name="passcode">PIN</string>
    <string name="passcode_manage">Manage passcode</string>
    <string name="passcode_preference_title">Passcode lock</string>
    <string name="passcode_set">Passcode set</string>
    <string name="passcodelock_hint" />
    <string name="passcodelock_numpad_0">0</string>
    <string name="passcodelock_numpad_1">1</string>
    <string name="passcodelock_numpad_2">2</string>
    <string name="passcodelock_numpad_3">3</string>
    <string name="passcodelock_numpad_4">4</string>
    <string name="passcodelock_numpad_5">5</string>
    <string name="passcodelock_numpad_6">6</string>
    <string name="passcodelock_numpad_7">7</string>
    <string name="passcodelock_numpad_8">8</string>
    <string name="passcodelock_numpad_9">9</string>
    <string name="pref_key_change_passcode">change_passcode</string>
    <string name="pref_key_passcode_toggle">turn_passcode_on_off</string>
    <string name="title_activity_crop__image">Crop_Image</string>
</resources>
