<!-- Customized keyboard layout -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimaryDark"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <LinearLayout
        android:id="@+id/AppUnlockLinearLayout1"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <ImageView
            android:id="@+id/passcode_logo"
            android:contentDescription="@string/cd_passcodelock_logo"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:scaleType="centerInside"
            android:tint="@color/colorWhite"
            android:src="@drawable/passcode_logo" >
        </ImageView>

        <TextView
            android:id="@+id/passcodelock_prompt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/passcodelock_prompt_message"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"></TextView>

        <EditText
            android:id="@+id/pin_field"
            android:clickable="false"
            android:focusable="false"
            android:inputType="numberPassword"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:maxLength="4"
            android:textColor="@color/colorAccent"
            android:background="@null">
        </EditText>
        <!--style="@style/PasscodeEditTextStyle"-->
        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingTop="30dp"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow>
                <Button
                    android:id="@+id/button1"
                    android:text="@string/passcodelock_numpad_1"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:layout_marginBottom="10dp">
                </Button>

                <Button
                    android:id="@+id/button2"
                    android:text="@string/passcodelock_numpad_2"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:layout_marginBottom="10dp">
                </Button>

                <Button
                    android:id="@+id/button3"
                    android:text="@string/passcodelock_numpad_3"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:layout_marginBottom="10dp">
                </Button>

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button4"
                    android:text="@string/passcodelock_numpad_4"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:layout_marginBottom="10dp">
                </Button>

                <Button
                    android:id="@+id/button5"
                    android:text="@string/passcodelock_numpad_5"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:layout_marginBottom="10dp">
                </Button>

                <Button
                    android:id="@+id/button6"
                    android:text="@string/passcodelock_numpad_6"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:layout_marginBottom="10dp">
                </Button>

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button7"
                    android:text="@string/passcodelock_numpad_7"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:layout_marginBottom="10dp">
                </Button>

                <Button
                    android:id="@+id/button8"
                    android:text="@string/passcodelock_numpad_8"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:layout_marginBottom="10dp">
                </Button>

                <Button
                    android:id="@+id/button9"
                    android:text="@string/passcodelock_numpad_9"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:layout_marginBottom="10dp">
                </Button>

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button_none"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text=""
                    android:layout_weight="1"
                    style="@style/PasscodeKeyboardButtonStyle" >
                </Button>

                <Button
                    android:id="@+id/button0"
                    android:text="@string/passcodelock_numpad_0"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:layout_marginBottom="10dp">
                </Button>

                <ImageButton
                    android:id="@+id/button_erase"
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:scaleType="centerInside"
                    android:layout_weight="1"
                    android:src="@drawable/ic_backspace"
                    style="@style/PasscodeKeyboardButtonStyle" >
                </ImageButton>

            </TableRow>
            
        </TableLayout>

        <ImageView
            android:id="@+id/image_fingerprint"
            android:contentDescription="@string/passcode_fingerprint_supported"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/passcodelock_fingerprint_image_margin_top"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_fingerprint"
            android:visibility="gone" >
        </ImageView>
        
    </LinearLayout>

</ScrollView>
